--- a/index.html
+++ b/index.html
@@ -1,39 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Tribute Page Project | freecodecamp.org</title>
-        <link rel="stylesheet" href="./css/style.css">
-	</head>
-	<body>
-		<div id="main">
-			<header>
-				<h1 id="title">Neville Goddard</h1>
-				<span id="title-caption">"Prophet, influencial teacher, and author"</span>
-			</header>
-			<main>
-				<div id="img-div">
-					<img id="image" src="https://i.ytimg.com/vi/kGujc1gAYe8/maxresdefault.jpg" alt="Neville Goddard" />
-					<span id="img-caption">Neville Goddard (back row, far right), with his family in Barbados</span>
-				</div>
-				<section id="tribute-info">
-					<div id="list">
-						<h2>Some of Neville Goddards accomplishments are:</h2>
-						<ul>
-							<li>Born in 1905</li>
-							<li>Wrote <u>"The Law and the Promise"</u></li>
-							<li>Tutored under Abdullah</li>
-							<li>Moved to Barbados during the depression</li>
-						</ul>
-					</div>
-					<p id="bio">After traveling extensively throughout the United States, Neville eventually made his home in Los Angeles where, in the 1950s, he gave a series of talks on television and radio, and for many years lectured regularly to capacity audiences at the Wilshire Ebell Theater. In the 1960s and early 1970s, he confined most of his lectures to Los Angeles, New York, and San Francisco.</p>
-					<p>In his early lectures and books Neville dealt solely with what he called The Law, the technique of creating one’s physical reality through imagining. It is this portion of his expression that most closely accords with the teachings of the New Thought movement. In describing The Law, Neville related how he made a sea voyage from New York to see his family in Barbados during theDepression, without any money of his own.</p>
-					<p>He related how, by the use of imaginal power, he was honorably discharged from military service to continue his lectures during World War II. He gave his audiences in San Francisco in the 1950s and 1960s accounts of how others had made use of The Law. He discussed it on television in the Los Angeles area, saying, “Learn how to use your imaginal power, lovingly, on behalf of others, for Man is moving into a world where everything is subject to his imaginal power.”</p><br />
-					<a id="tribute-link" href="https://freeneville.com/neville-goddard-wiki/" target="_blank"><span class="button">Learn more about Neville Goddard</span></a>
-				</section>
-			</main>
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Tribute Page Project | freecodecamp.org</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <div id="main">
+      <header>
+        <h1 id="title">Neville Goddard</h1>
+        <span id="title-caption"
+          >"Prophet, influencial teacher, and author"</span
+        >
+      </header>
+      <main>
+        <div id="img-div">
+          <img
+            id="image"
+            src="https://i.ytimg.com/vi/kGujc1gAYe8/maxresdefault.jpg"
+            alt="Neville Goddard"
+          />
+          <span id="img-caption"
+            >Neville Goddard (back row, far right), with his family in
+            Barbados</span
+          >
+        </div>
+        <section id="tribute-info">
+          <div id="list">
+            <h2>Some of Neville Goddards accomplishments are:</h2>
+            <ul>
+              <li>Born in 1905</li>
+              <li>Wrote <u>"The Law and the Promise"</u></li>
+              <li>Tutored under Abdullah</li>
+              <li>Moved to Barbados during the depression</li>
+            </ul>
+          </div>
+          <p id="bio">
+            After traveling extensively throughout the United States, Neville
+            eventually made his home in Los Angeles where, in the 1950s, he gave
+            a series of talks on television and radio, and for many years
+            lectured regularly to capacity audiences at the Wilshire Ebell
+            Theater. In the 1960s and early 1970s, he confined most of his
+            lectures to Los Angeles, New York, and San Francisco.
+          </p>
+          <p>
+            In his early lectures and books Neville dealt solely with what he
+            called The Law, the technique of creating one’s physical reality
+            through imagining. It is this portion of his expression that most
+            closely accords with the teachings of the New Thought movement. In
+            describing The Law, Neville related how he made a sea voyage from
+            New York to see his family in Barbados during theDepression, without
+            any money of his own.
+          </p>
+          <p>
+            He related how, by the use of imaginal power, he was honorably
+            discharged from military service to continue his lectures during
+            World War II. He gave his audiences in San Francisco in the 1950s
+            and 1960s accounts of how others had made use of The Law. He
+            discussed it on television in the Los Angeles area, saying, “Learn
+            how to use your imaginal power, lovingly, on behalf of others, for
+            Man is moving into a world where everything is subject to his
+            imaginal power.”
+          </p>
+          <br />
+          <a
+            id="tribute-link"
+            href="https://freeneville.com/neville-goddard-wiki/"
+            target="_blank"
+            ><span class="button">Learn more about Neville Goddard</span></a
+          >
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
